[package]
documentation = "http://gtk-rs.org/docs/gtk4/"
categories = ["api-bindings", "gui"]
license = "MIT"
description = "Rust bindings for the GTK 4 library"
name = "gtk4"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
readme = "README.md"
version = "0.1.0"
keywords = ["gtk", "gtk4", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk4"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/gtk4", service = "github" }
travis-ci = { repository = "gtk-rs/gtk4" }

[lib]
name = "gtk4"

[features]
purge-lgpl-docs = ["gtk-rs-lgpl-docs", "gdk4/purge-lgpl-docs", "gsk4/purge-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs", "gdk4/embed-lgpl-docs", "gsk4/embed-lgpl-docs"]
dox = ["gdk4/dox", "gsk4/dox", "gtk4-sys/dox", "futures"]
futures = ["futures-preview", "fragile", "gio/futures"]
subclassing = ["glib/subclassing", "gio/subclassing"]

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "^1.0"

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1.3"
optional = true
git = "https://github.com/gtk-rs/lgpl-docs"

[dependencies]
libc = "0.2"
bitflags = "1.0"
lazy_static = "1.0"
fragile = { version = "0.3", optional = true }
futures-preview = { version = "0.3.0-alpha", optional = true }
atk = { git = "https://github.com/gtk-rs/atk" }
atk-sys = { git = "https://github.com/gtk-rs/sys" }
cairo-sys-rs = { git = "https://github.com/gtk-rs/cairo" }
gdk-pixbuf-sys = { git = "https://github.com/gtk-rs/sys" }
gdk4-sys = { git = "https://github.com/gtk-rs/sys" }
gio-sys = { git = "https://github.com/gtk-rs/sys" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
graphene-sys = { git = "https://github.com/gtk-rs/graphene" }
gsk4-sys = { git = "https://github.com/gtk-rs/sys" }
gtk4-sys = { git = "https://github.com/gtk-rs/sys" }
pango-sys = { git = "https://github.com/gtk-rs/sys" }
cairo-rs = { git = "https://github.com/gtk-rs/cairo" }
gio = { git = "https://github.com/gtk-rs/gio", features = ["v2_44"] }
glib = { git = "https://github.com/gtk-rs/glib" }
gdk4 = { git = "https://github.com/gtk-rs/gdk4" }
graphene = { package = "graphene-rs", git = "https://github.com/gtk-rs/graphene" }
gsk4 = { git = "https://github.com/gtk-rs/gsk4" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf" }
pango = { git = "https://github.com/gtk-rs/pango" }

[dev-dependencies]
gir-format-check = "^0.1"
