[workspace]
resolver = "2"

default-members = [
  "examples",
  "gdk4",
  "gdk4/sys",
  "gsk4",
  "gsk4/sys",
  "gtk4",
  "gtk4/sys",
  "gtk4-macros",
]


members = [
  "examples",
  "gdk4",
  "gdk4/sys",
  "gdk4-x11",
  "gdk4-x11/sys",
  "gdk4-wayland",
  "gdk4-wayland/sys",
  "gdk4-win32",
  "gdk4-win32/sys",
  "gsk4",
  "gsk4/sys",
  "gtk4",
  "gtk4/sys",
  "gtk4-macros",
]

exclude = ["checker", "gir", "book/listings"]
