[workspace]
resolver = "3"

default-members = [
  "examples",
  "gdk4",
  "gdk4/sys",
  "gsk4",
  "gsk4/sys",
  "gtk4",
  "gtk4/sys",
  "gtk4-macros",
]


members = [
  "examples",
  "gdk4",
  "gdk4/sys",
  "gdk4-x11",
  "gdk4-x11/sys",
  "gdk4-wayland",
  "gdk4-wayland/sys",
  "gdk4-win32",
  "gdk4-win32/sys",
  "gdk4-macos",
  "gdk4-macos/sys",
  "gsk4",
  "gsk4/sys",
  "gtk4",
  "gtk4/sys",
  "gtk4-macros",
]

exclude = ["checker", "gir", "book/listings"]

[workspace.package]
authors = ["The gtk-rs Project Developers"]
categories = ["api-bindings", "gui"]
edition = "2021"
homepage = "https://gtk-rs.org/gtk4-rs"
license = "MIT"
repository = "https://github.com/gtk-rs/gtk4-rs"
rust-version = "1.92"
version = "0.11.0-alpha.1"

[workspace.dependencies]
cairo-sys-rs = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main"}
cairo-rs = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main", features = ["use_glib"]}
gdk-pixbuf-sys = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main"}
gdk-pixbuf = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main"}
gio-sys = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main", features = ["v2_66"]}
gio = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main", features = ["v2_66"]}
gobject-sys = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main", features = ["v2_66"]}
glib-sys = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main", features = ["v2_66"]}
glib = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main", features = ["v2_66"]}
graphene-sys = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main"}
graphene = {package = "graphene-rs", git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main"}
libc = "0.2"
pango-sys = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main", features = ["v1_46"]}
pango = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.22.0-alpha", branch = "main", features = ["v1_46"]}
gir-format-check = "^0.1"
gdk4-macos-sys = {path = "gdk4-macos/sys", version = "0.11.0-alpha"}
gdk4-x11-sys = {path = "gdk4-x11/sys", version = "0.11.0-alpha"}
gdk4-wayland-sys = {path = "gdk4-wayland/sys", version = "0.11.0-alpha"}
gdk4-win32-sys = {path = "gdk4-win32/sys", version = "0.11.0-alpha"}
gdk4-sys = {path = "gdk4/sys", version = "0.11.0-alpha"}
gdk = {package = "gdk4", path = "gdk4", version = "0.11.0-alpha"}
gsk4-sys = {path = "gsk4/sys", version = "0.11.0-alpha"}
gsk = {package = "gsk4", path = "gsk4", version = "0.11.0-alpha"}
gtk4-macros = {path = "gtk4-macros", version = "0.11.0-alpha"}
gtk4-sys = {path = "gtk4/sys", version = "0.11.0-alpha"}
gtk = { path = "gtk4", package = "gtk4", version = "0.11.0-alpha" }
