[package]
name = "gtk4-rs-examples"
version = "0.1.0"
authors = ["The Gtk-rs Project Developers"]
edition = "2018"
autobins = false

[dependencies]
chrono = "0.4.19"

[dependencies.gtk]
path = "../gtk4"
package = "gtk4"

# used by gif-paintable example
[dependencies.image]
version = "0.23"
features = ["gif"]
default-features = false
optional = true

[[bin]]
name = "basic"

[[bin]]
name = "builder_basics"

[[bin]]
name = "builders"

[[bin]]
name = "clock"

[[bin]]
name = "composite_template"

[[bin]]
name = "css"

[[bin]]
name = "custom_paintable"

[[bin]]
name = "entry_completion"

[[bin]]
name = "entry_undo"

[[bin]]
name = "gif_paintable"
required-features = ["image"]

[[bin]]
name = "orientable_subclass"

[[bin]]
name = "text_viewer"

[[bin]]
name = "video_player"

[[bin]]
name = "widget_subclass"
