[package]
name = "gdk4-macos"
description = "Rust bindings of the GDK4 macos library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4_macos/"
keywords = ["gdk4", "gdk4-macos", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
v4_8 = ["gdk4-macos-sys/v4_8"]
cocoa = ["dep:cocoa"]

[dependencies]
gdk4-macos-sys.workspace = true
gdk.workspace = true
gio.workspace = true
glib.workspace = true
libc.workspace = true
cocoa = { version = "0.26", default-features = false, optional = true }

[dev-dependencies]
gir-format-check.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
