[package]
authors = ["The gtk-rs Project Developers"]
description = "Rust bindings of the GDK 4 Wayland library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4_wayland/"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gdk4", "gdk4-wayland", "gtk-rs", "gnome", "GUI"]
license = "MIT"
name = "gdk4-wayland"
readme = "README.md"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.4.10"
rust-version = "1.56"

[features]
v4_4 = ["ffi/v4_4"]
dox = ["ffi/dox", "xkb_crate", "wayland_crate", "egl"]
wayland_crate = ["wayland-client"]
egl = ["khronos-egl"]
xkb_crate = ["xkb"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
ffi = {path = "./sys", package = "gdk4-wayland-sys", version = "0.4.9"}
gdk = {path = "../gdk4", package = "gdk4", version = "0.4.9"}
gio = {version = "0.15.2", features = ["v2_66"], git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15"}
glib = {version = "0.15.2", features = ["v2_66"], git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15"}
libc = "0.2"
wayland-client = {version = "0.29", features = ["use_system_lib"], optional = true}
khronos-egl = {version = "4.1.0", optional = true}
xkb = {version = "0.2.1", optional = true}

[dev-dependencies]
gir-format-check = "^0.1"
