[package]
authors = ["The gtk-rs Project Developers"]
description = "Rust bindings of the GDK 4 Wayland library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4_wayland/"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gdk4", "gdk4-wayland", "gtk-rs", "gnome", "GUI"]
license = "MIT"
name = "gdk4-wayland"
readme = "README.md"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.8.0"
rust-version = "1.70"

[features]
v4_4 = ["ffi/v4_4", "gdk/v4_4"]
v4_10 = ["ffi/v4_10", "v4_4", "gdk/v4_10"]
v4_12 = ["ffi/v4_12", "v4_10", "gdk/v4_12"]
wayland_crate = ["wayland-client", "wayland-backend"]
egl = ["khronos-egl"]
xkb_crate = ["xkb"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
ffi = {path = "./sys", package = "gdk4-wayland-sys", version = "0.8"}
gdk = {path = "../gdk4", package = "gdk4", version = "0.8"}
gio = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.19", features = ["v2_66"]}
glib = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.19", features = ["v2_66"]}
libc = "0.2"
wayland-client = {version = "0.31.1", optional = true}
wayland-backend = {version = "0.1.0", optional = true, features = ["client_system"]}
khronos-egl = {version = "6.0", optional = true}
xkb = {version = "0.3", optional = true}

[dev-dependencies]
gir-format-check = "^0.1"
