[package]
name = "gdk4-wayland"
description = "Rust bindings of the GDK 4 Wayland library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4_wayland/"
keywords = ["gdk4", "gdk4-wayland", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
v4_4 = ["gdk4-wayland-sys/v4_4", "gdk/v4_4"]
v4_10 = ["gdk4-wayland-sys/v4_10", "v4_4", "gdk/v4_10"]
v4_12 = ["gdk4-wayland-sys/v4_12", "v4_10", "gdk/v4_12"]
v4_16 = ["gdk4-wayland-sys/v4_16", "v4_12", "gdk/v4_16"]
wayland_crate = ["wayland-client", "wayland-backend"]
egl = ["khronos-egl"]

[dependencies]
gdk4-wayland-sys.workspace = true
gdk.workspace=  true
gio.workspace = true
glib.workspace = true
libc.workspace = true
wayland-client = {version = "0.31.0", optional = true}
wayland-backend = {version = "0.3.0", optional = true, features = ["client_system"]}
khronos-egl = {version = "6.0", optional = true}

[dev-dependencies]
gir-format-check.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
