[package]
name = "gdk4-win32"
description = "Rust bindings of the GDK4 Win32 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4_win32/"
keywords = ["gdk4", "gdk4-win32", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.system-deps.gtk4_win32]
name = "gtk4-win32"
version = "4"

[features]
v4_4 = ["gdk4-win32-sys/v4_4", "gdk/v4_4"]
v4_8 = ["v4_4", "gdk4-win32-sys/v4_8", "gdk/v4_8"]
egl = ["khronos-egl"]
win32 = ["windows"]

[dependencies]
gdk4-win32-sys.workspace = true
gdk.workspace = true
gio.workspace = true
glib.workspace = true
libc.workspace = true
khronos-egl = {version = "6.0", optional = true}
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
], optional = true }

[dev-dependencies]
gir-format-check.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
