[package]
authors = ["The gtk-rs Project Developers"]
description = "Rust bindings of the GDK4 X11 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4_x11/"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gdk4", "gdk4-x11", "gtk-rs", "gnome", "GUI"]
license = "MIT"
name = "gdk4-x11"
readme = "README.md"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.6.0"
rust-version = "1.64"
[features]
v4_4 = ["ffi/v4_4"]
dox = ["ffi/dox", "gdk/dox", "gio/dox", "glib/dox", "egl", "xlib"]
egl = ["khronos-egl"]
xlib = ["x11"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
ffi = {path = "./sys", package = "gdk4-x11-sys", version = "0.6"}
gdk = {path = "../gdk4", package = "gdk4", version = "0.6"}
gio = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.17", features = ["v2_66"]}
glib = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.17", features = ["v2_66"]}
libc = "0.2"
x11 = {version = "2.20", optional = true }
khronos-egl = {version = "4.1", optional = true}

[dev-dependencies]
gir-format-check = "^0.1"
