[package]
name = "gdk4-x11"
description = "Rust bindings of the GDK4 X11 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4_x11/"
keywords = ["gdk4", "gdk4-x11", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
v4_4 = ["gdk4-x11-sys/v4_4", "gdk/v4_4"]
v4_10 = ["gdk4-x11-sys/v4_10", "v4_4", "gdk/v4_10"]
v4_16 = ["gdk4-x11-sys/v4_16", "v4_10", "gdk/v4_16"]
v4_18 = ["gdk4-x11-sys/v4_18", "v4_16", "gdk/v4_18"]
egl = ["khronos-egl"]
xlib = ["x11"]

[dependencies]
gdk4-x11-sys.workspace = true
gdk.workspace = true
gio.workspace = true
glib.workspace = true
libc.workspace = true
x11 = {version = "2.20", optional = true }
khronos-egl = {version = "6.0", optional = true}

[dev-dependencies]
gir-format-check.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
