[package]
authors = ["The gtk-rs Project Developers"]
description = "Rust bindings of the GDK 4 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4/"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gdk", "gdk4", "gtk-rs", "gnome", "GUI"]
license = "MIT"
name = "gdk4"
readme = "README.md"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.8.0"
rust-version = "1.70"
[lib]
name = "gdk4"

[features]
v4_2 = ["ffi/v4_2"]
v4_4 = ["ffi/v4_4", "v4_2"]
v4_6 = ["ffi/v4_6", "v4_4"]
v4_8 = ["ffi/v4_8", "v4_6"]
v4_10 = ["ffi/v4_10", "v4_8"]
v4_12 = ["ffi/v4_12", "v4_10"]
v4_14 = ["ffi/v4_14", "v4_12"]
gl = ["dep:gl"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
cairo-rs = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.19", features = ["use_glib"]}
ffi = {package = "gdk4-sys", path = "./sys", version = "0.8"}
gdk-pixbuf = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.19"}
gio = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.19", features = ["v2_66"]}
glib = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.19", features = ["v2_66"]}
libc = "0.2"
pango = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.19", features = ["v1_46"]}
gl = {version = "0.14", optional = true}

[dev-dependencies]
gir-format-check = "^0.1"
