[package]
name = "gdk4"
description = "Rust bindings of the GDK 4 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4/"
keywords = ["gdk", "gdk4", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "gdk4"

[features]
v4_2 = ["ffi/v4_2"]
v4_4 = ["ffi/v4_4", "v4_2"]
v4_6 = ["ffi/v4_6", "v4_4"]
v4_8 = ["ffi/v4_8", "v4_6"]
v4_10 = ["ffi/v4_10", "v4_8"]
v4_12 = ["ffi/v4_12", "v4_10"]
v4_14 = ["ffi/v4_14", "v4_12"]
gl = ["dep:gl"]

[dependencies]
ffi = {package = "gdk4-sys", path = "./sys", version = "0.9"}
cairo-rs.workspace = true
gdk-pixbuf.workspace = true
gio.workspace = true
glib.workspace = true
libc.workspace = true
pango.workspace = true
gl = {version = "0.14", optional = true}

[dev-dependencies]
gir-format-check.workspace = true
