[package]
name = "gdk4"
description = "Rust bindings of the GDK 4 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4/"
keywords = ["gdk", "gdk4", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "gdk4"

[features]
v4_2 = ["gdk4-sys/v4_2"]
v4_4 = ["gdk4-sys/v4_4", "v4_2"]
v4_6 = ["gdk4-sys/v4_6", "v4_4"]
v4_8 = ["gdk4-sys/v4_8", "v4_6"]
v4_10 = ["gdk4-sys/v4_10", "v4_8"]
v4_12 = ["gdk4-sys/v4_12", "v4_10"]
v4_14 = ["gdk4-sys/v4_14", "v4_12"]
v4_16 = ["gdk4-sys/v4_16", "v4_14"]
v4_18 = ["gdk4-sys/v4_18", "v4_16"]
gl = ["dep:gl"]

[dependencies]
gdk4-sys.workspace = true
cairo-rs.workspace = true
gdk-pixbuf.workspace = true
gio.workspace = true
glib.workspace = true
libc.workspace = true
pango.workspace = true
gl = {version = "0.14", optional = true}

[dev-dependencies]
gir-format-check.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
