[package]
authors = ["The gtk-rs Project Developers"]
description = "Rust bindings of the GSK 4 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gsk4"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gsk", "gsk4", "gtk-rs", "gnome", "GUI"]
license = "MIT"
name = "gsk4"
readme = "README.md"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7.1"
rust-version = "1.70"
[lib]
name = "gsk4"

[features]
broadway = ["ffi/broadway"]
vulkan = ["ffi/vulkan"]
v4_2 = ["ffi/v4_2", "gdk/v4_2"]
v4_4 = ["ffi/v4_4", "gdk/v4_4", "v4_2"]
v4_6 = ["ffi/v4_6", "gdk/v4_6", "v4_4"]
v4_10 = ["ffi/v4_10", "gdk/v4_10", "v4_6"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
cairo-rs = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.18", branch = "0.18"}
ffi = {package = "gsk4-sys", path = "./sys", version = "0.7"}
gdk = {package = "gdk4", path = "../gdk4", version = "0.7"}
glib = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.18", branch = "0.18", features = ["v2_66"]}
graphene = {package = "graphene-rs", git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.18", branch = "0.18"}
libc = "0.2"
pango = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.18", branch = "0.18", features = ["v1_46"]}

[dev-dependencies]
gir-format-check = "^0.1"
