[package]
name = "gsk4"
description = "Rust bindings of the GSK 4 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gsk4"
keywords = ["gsk", "gsk4", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "gsk4"

[features]
broadway = ["ffi/broadway"]
vulkan = ["ffi/vulkan"]
v4_2 = ["ffi/v4_2", "gdk/v4_2"]
v4_4 = ["ffi/v4_4", "gdk/v4_4", "v4_2"]
v4_6 = ["ffi/v4_6", "gdk/v4_6", "v4_4"]
v4_10 = ["ffi/v4_10", "gdk/v4_10", "v4_6"]
v4_14 = ["ffi/v4_14", "v4_10"]

[dependencies]
ffi = {package = "gsk4-sys", path = "./sys", version = "0.8"}
cairo-rs.workspace = true
gdk.workspace = true
glib.workspace = true
graphene.workspace = true
libc.workspace = true
pango.workspace = true

[dev-dependencies]
gir-format-check.workspace = true
