[package]
name = "gsk4"
description = "Rust bindings of the GSK 4 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gsk4"
keywords = ["gsk", "gsk4", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "gsk4"

[features]
broadway = ["gsk4-sys/broadway"]
vulkan = ["gsk4-sys/vulkan"]
v4_2 = ["gsk4-sys/v4_2", "gdk/v4_2"]
v4_4 = ["gsk4-sys/v4_4", "gdk/v4_4", "v4_2"]
v4_6 = ["gsk4-sys/v4_6", "gdk/v4_6", "v4_4"]
v4_10 = ["gsk4-sys/v4_10", "gdk/v4_10", "v4_6"]
v4_14 = ["gsk4-sys/v4_14", "gdk/v4_14", "v4_10"]
v4_16 = ["gsk4-sys/v4_16", "gdk/v4_16", "v4_14"]
v4_18 = ["gsk4-sys/v4_18", "gdk/v4_18", "v4_16"]

[dependencies]
gsk4-sys.workspace = true
cairo-rs.workspace = true
gdk.workspace = true
glib.workspace = true
graphene.workspace = true
libc.workspace = true
pango.workspace = true

[dev-dependencies]
gir-format-check.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
