[package]
description = "Macros helpers for GTK 4 bindings"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gtk4_macros"
keywords = ["gtk", "gtk4", "gtk-rs", "gnome", "GUI"]
name = "gtk4-macros"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[features]
default = []
xml_validation = ["quick-xml"]
blueprint = []

[dependencies]
anyhow = "1.0"
quick-xml = {version = "0.31", optional = true}
proc-macro-crate = "3.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}

[dev-dependencies]
futures-channel = "0.3"
futures-util = "0.3"
gtk = { path = "../gtk4", package = "gtk4", version = "0.8" }
trybuild2 = "1.0"